Added _finders_buttons partial to header to enhance flexibility in navigation, from where you are to wherever you like. This partial s mis labeled as it was initially bootstrap buttons, but these are cludgy and links are actually more appropriate, at least in this simple initial design.

--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -49,8 +49,7 @@
               -else
                 %td= @addr.city
               
-              %td{align: 'left', width: '32'}
-                = link_to truncate(company.url, :length => 120), "http://#{company.url}", :target => 'blank'
+              %td= link_to truncate(company.url, :length => 120), "http://#{company.url}", :target => 'blank'
               
               %td= company.credit_terms
 
@@ -63,5 +62,12 @@
         %i.glyphicon.glyphicon-plus
           New Company
 
+  .nbsp 
+  .nbsp
+  
+  
       
-      
+
+          
+
+
