--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -14,7 +14,9 @@
   .col-md-12
   
 .row
-  .col-md-12
+  .col-md-2
     = link_to 'Home', root_path      
     - flash.each do |name, msg|
       = content_tag :div, msg, class: name
+  .col-sm-10
+    = render "shared/finders_buttons"
