--- a/app/views/equipment/index.html.haml
+++ b/app/views/equipment/index.html.haml
@@ -30,7 +30,7 @@
 
         %tbody
           - @equipment.each do |e|
-            %tr
+            %tr.data
               %td= e.name
               %td= e.company.display_name
 
