--- a/app/views/shared/_finders_buttons.html.haml
+++ b/app/views/shared/_finders_buttons.html.haml
@@ -1,19 +1,17 @@
 .row
   .col
-    
     =link_to 'Addresses', addresses_path
   .col
-    
     =link_to 'Companies', companies_path
   .col
     =link_to 'Conditions', conditions_path
   .col
     =link_to 'Contacts', identifiers_path
   .col
-    =link_to 'Equipment', equipments_path
+    =link_to 'Equipment', equipment_index_path
   .col
     =link_to 'Materials', materials_path
-  .col
+  .col-sm-1
     =link_to 'People', people_path
   .col
     =link_to 'Tip Sites', tips_path
