--- a/app/views/materials/index.html.haml
+++ b/app/views/materials/index.html.haml
@@ -32,7 +32,7 @@
 
         %tbody
           - @materials.each do |material|
-            %tr
+            %tr.data
           
               %td{align: 'left', width: '32'}= material.name
 
