--- a/app/views/shared/_finders_buttons.html.haml
+++ b/app/views/shared/_finders_buttons.html.haml
@@ -1,6 +1,6 @@
 .row
   .col
-    =link_to 'Addresses', addresses_path
+    =link_to 'Addresses', addresses_index_path
   .col
     =link_to 'Companies', companies_path
   .col
