--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -42,10 +42,12 @@
         %tbody
           - @addresses.each do |addr|
             %tr
-              
-              %td{align: 'left', width: '224'}= link_to addr.addressable.display_name, company_path(addr)
-              %td{align: 'left', width: '224'}= addr.street_address
-              %td{align: 'left', width: "64"}= addr.city
+              -unless addr.addressable.nil?
+                %td= link_to addr.addressable.display_name, company_path(addr)
+              -else
+                -flash[:alert] = "Alert:  address record #{addr.id} has invalid parent: #{addr.addressable_type}, #{addr.addressable_id}."
+              %td= addr.street_address
+              %td= addr.city
               %td= addr.state
               %td= addr.post_code
               %td= map_reference
@@ -54,7 +56,3 @@
               %td= link_to 'Edit', edit_address_path(addr)
               %td= link_to 'Destroy', address, method: :delete, data: { confirm: "Are you sure you want to delete #{addr}?" } 
       %br
-
-
-
--#= link_to 'New Address', new_address_path
