Address records with invalid addresable ids identified in Flash :alert messages. Takes an admin to remove these. Added record ID

--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -43,7 +43,7 @@
           - @addresses.each do |addr|
             %tr
               -unless addr.addressable.nil?
-                %td= link_to addr.addressable.display_name, company_path(addr)
+                %td= link_to "#{addr.addressable.display_name} "+"#{addr.id}", company_path(addr)
               -else
                 -flash[:alert] = "Alert:  address record #{addr.id} has invalid parent: #{addr.addressable_type}, #{addr.addressable_id}."
               %td= addr.street_address
