Added Shipments to Menus, and changed Companies to Carriers

--- a/app/views/shared/_finders_buttons.html.haml
+++ b/app/views/shared/_finders_buttons.html.haml
@@ -1,8 +1,8 @@
 .row
   .col
-    =link_to 'Addresses', addresses_index_path
+    =link_to 'Addresses', addresses_path
   .col
-    =link_to 'Companies', companies_path
+    =link_to 'Carriers', companies_path
   .col
     =link_to 'Conditions', conditions_path
   .col
@@ -13,6 +13,8 @@
     =link_to 'Materials', materials_path
   .col-sm-1
     =link_to 'People', people_path
+  .col-sm
+    =link_to 'Shipments', companies_path
   .col
     =link_to 'Tip Sites', tips_path
   
