--- a/app/views/welcome/landing.html.haml
+++ b/app/views/welcome/landing.html.haml
@@ -30,8 +30,9 @@
   &nbsp;
   = link_to 'People', people_path
   &nbsp;
+  = link_to 'Shipments', companies_path
+  &nbsp;
   = link_to 'Tip Sites', tips_path
-
 
   %p
   Under Development
