--- a/app/views/welcome/landing.html.haml
+++ b/app/views/welcome/landing.html.haml
@@ -22,6 +22,8 @@
   &nbsp;
   = link_to 'Carriers', companies_path
   &nbsp;
+  = link_to 'Comments', comments_path
+  &nbsp;
   = link_to 'Contacts', identifiers_path
   &nbsp;
   = link_to 'Equipment', equipment_index_path
@@ -30,7 +32,7 @@
   &nbsp;
   = link_to 'People', people_path
   &nbsp;
-  = link_to 'Shipments', companies_path
+  = link_to 'Shipments', shipments_path
   &nbsp;
   = link_to 'Tip Sites', tips_path
 
