--- a/app/views/shipments/index.html.haml
+++ b/app/views/shipments/index.html.haml
@@ -31,7 +31,10 @@
                 Deadline
             %th
               %em
-                Body
+                Cargo
+            %th
+              %em
+                Load
             %th
               %em
                 Quote Basis
@@ -47,7 +50,8 @@
               %td= shipment.ship_from
               %td= shipment.ship_to
               %td= shipment.deadline
-              %td= shipment.body
+              %td= shipment.cargo
+              %td= shipment.load
               %td= shipment.quote_basis
               %td= shipment.quote_complete
               
