Schedule:  cargo is crashing in _seaerch_panel on Heroku.  Changed from _text to _area.  Trial and error here as is working locally just fine.

--- a/app/views/shipments/_form.html.haml
+++ b/app/views/shipments/_form.html.haml
@@ -23,10 +23,10 @@
     = f.text_field :deadline
   .field
     = f.label :cargo
-    = f.text_field :cargo
+    = f.text_area :cargo
   .field
     = f.label :load
-    = f.text_field :load
+    = f.text_area :load
   .field
     = f.label :quote_basis
     = f.text_area :quote_basis
