--- a/app/views/shipments/_form.html.haml
+++ b/app/views/shipments/_form.html.haml
@@ -8,7 +8,7 @@
 
   .field
     = f.label :tracking_id
-    = f.number_field :tracking_id
+    = f.text_field :tracking_id
   .field
     = f.label :ship_from
     = f.text_field :ship_from
@@ -25,14 +25,14 @@
     = f.label :cargo
     = f.text_area :cargo
   .field
-    = f.label :load
-    = f.text_area :load
+    = f.label :utlization
+    = f.text_field :utilization
   .field
     = f.label :quote_basis
     = f.text_area :quote_basis
   .field
     = f.label :quote_complete
-    = f.text_field :quote_complete
+    = f.number_field :quote_complete
 
   .actions
     = f.submit 'Save'
