Comments.  Layout improvements so tracking_id visible.

--- a/app/views/comments/index.html.haml
+++ b/app/views/comments/index.html.haml
@@ -3,6 +3,7 @@
 %table
   %thead
     %tr
+      %th Tracking ID
       %th By
       %th Body
       %th
@@ -12,9 +13,9 @@
   %tbody
     - @comments.each do |comment|
       %tr
+        %td= comment.tracking_id
         %td= comment.by
         %td= comment.body
-        %td= comment.tracking_id
         %td= link_to 'Show', comment
         %td= link_to 'Edit', edit_comment_path(comment)
         %td= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' }
