--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,5 +1,13 @@
-  
-  
+
+%br
+.row
+  .col-sm-2
+
+  .col-sm-auto
+       
+    %footer
+      = render "shared/finders_buttons"
+%br
 .row
   .col
   .col-sm-auto
