--- a/app/views/shipments/show.html.haml
+++ b/app/views/shipments/show.html.haml
@@ -1,34 +1,77 @@
 %p#notice= notice
 
-%p
-  %b Tracking ID (unique):
-  = @shipment.tracking_id
-%p
-  %b Ship from:
-  = @shipment.ship_from
-%p
-  %b Ship to:
-  = @shipment.ship_to
-%p
-  %b Pickup:
-  = @shipment.pickup
-%p
-  %b Deliver:
-  = @shipment.deadline
-%p
-  %b Cargo:
-  = @shipment.cargo
-%p
-  %b Load:
-  = @shipment.utilization
-%p
-  %b Quote basis:
-  = @shipment.quote_basis
-%p
-  %b Quote complete:
-  = @shipment.quote_complete
+.container-fluid
 
+  %h3
+    
+    = @shipment.tracking_id
+  
+  %p
+  .row
+    .col-sm-2
+      %em
+        Attributes
+    .col-sm-10
+      %em
+        Settings
 
-= link_to 'Edit', edit_shipment_path(@shipment)
-\|
-= link_to 'Back', shipments_path
+  %p
+  .row      
+    .col-sm-2
+      Tracking Identifier
+    .col-sm-10
+      = @shipment.tracking_id
+  .row      
+    .col-sm-2
+      Ship From:
+    .col-sm-10
+      = @shipment.ship_from     
+  .row      
+    .col-sm-2
+      Ship To
+    .col-sm-10
+      = @shipment.ship_to
+  .row      
+    .col-sm-2
+      Pickup 
+    .col-sm-10
+      = @shipment.pickup
+
+  .row      
+    .col-sm-2
+      Deliver By
+    .col-sm-10
+      = @shipment.deadline
+
+  .row      
+    .col-sm-2
+      Cargo
+    .col-sm-10
+      = @shipment.cargo
+
+  .row      
+    .col-sm-2
+      Utilization
+    .col-sm-10
+      = @shipment.utilization
+
+  .row      
+    .col-sm-2
+      Quote Basis
+    .col-sm-10
+      = @shipment.quote_basis
+
+  .row      
+    .col-sm-2
+      Quote Amount ($)
+    .col-sm-10
+      = @shipment.quote_complete
+
+  %p
+  .row    
+    .col-sm-2
+
+      = link_to 'Edit', edit_shipment_path(@shipment)
+      |
+      = link_to 'Back', shipment_index_path
+
