Shipments. Cargo updates were failing to settle into database because the text_area field in form template refered to another field.  DuH.

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -115,5 +115,6 @@
   %p
   %nbsp
   %nbsp
-
+  = link_to_unless_current("Home", { action: "index" })
+  = link_to_unless_current("Show", { action: "show" })
 
