--- a/app/views/shipments/_form.html.haml
+++ b/app/views/shipments/_form.html.haml
@@ -34,7 +34,7 @@
   .form-group
     = form.label :cargo, "Cargo", class: "col-md-4 control-label" 
     .col-md-8
-      = form.text_area :deadline, class: "form-control"
+      = form.text_area :cargo, class: "form-control"
 
   .form-group
     = form.label :utilization, "Utilization", class: "col-md-4 control-label" 
