Navigation.  Based on how Shipments now looks, Back buttons and links always refer to the controller#index.  Simpler and more intuitive.  Next figure out how Search service is enabled and used.  It may be easier to stay with the _seaerch_panel approach, but some research may suggest otherwise?

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -114,7 +114,10 @@
       = link_to "edit", root_path      
   %p
   %nbsp
-  %nbsp
-  = link_to_unless_current("Home", { action: "index" })
-  = link_to_unless_current("Show", { action: "show" })
-
+  
+  .row    
+    .col-sm-1
+ 
+      = link_to 'Edit', edit_company_path(@company)
+    .col-sm-1
+      = link_to 'Back', companies_path
