--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,7 +1,8 @@
 
 .row.justify-content-md-center
-  .col-sm-8
-    Currently in #{controller_name}
+  .col
+    %h4
+    #{controller_name}##{action_name}
 
 .row
   .col-sm-1
