--- a/app/views/welcome/landing.html.haml
+++ b/app/views/welcome/landing.html.haml
@@ -17,7 +17,7 @@
 %br
 %center
 
-  = link_to new_shipment_path, class: 'btn btn-secondary' do
+  = link_to shipments_path, class: 'btn btn-secondary' do
     %i.glyphicon.glyphicon-plus
       Continue to Shipments
 %br
