--- a/app/views/shipments/index.html.haml
+++ b/app/views/shipments/index.html.haml
@@ -9,29 +9,27 @@
     .col
       %h2 Shipments
 .row
-  .col-sm-1
+  .col-sm-2
     .col
       = @shipments.count.to_s
       listed
 
 
-  .col-sm-1
+  .col-sm-2
     .col
-
-      = will_paginate  
-  
-
-.row
+      = will_paginate
   .col-sm-2
     .col
       = link_to shipment_search_path, class: 'btn btn-secondary' do
         %i.glyphicon.glyphicon-plus
-          Find Shipments
-
+          Search
   .col-sm-2
-    = link_to new_shipment_path, class: 'btn btn-secondary' do
-      %i.glyphicon.glyphicon-plus
-        New Shipment
+    .col
+      = link_to new_shipment_path, class: 'btn btn-secondary' do
+        %i.glyphicon.glyphicon-plus
+          New Shipment
+
+
 
 .row
   .col-sm-2
