Shipments.  Search based on alternate #index (called #search) working.  Option to make search key layout horizontal might be attractive.

--- a/app/views/shipments/_search_panel.html.haml
+++ b/app/views/shipments/_search_panel.html.haml
@@ -25,11 +25,12 @@
 
     = f.submit class: 'btn btn-primary'
     .btn
-      = link_to "Clear", request_path, class: "btn btn-secondary"      
+      = link_to "Clear", request_path, class: "btn btn-secondary"
+  .row
+    .col-sm-1
+      .btn      
+        = link_to "Back", shipments_path, class: "btn btn-secondary"
     %hr
-
+    
     %p
 
-    = link_to new_shipment_path, class: 'btn btn-secondary' do
-      %i.glyphicon.glyphicon-plus
-        New Shipment
