--- a/app/views/shipments/index.html.haml
+++ b/app/views/shipments/index.html.haml
@@ -20,7 +20,7 @@
       = will_paginate
   .col-sm-2
     .col
-      = link_to shipment_search_path, class: 'btn btn-secondary' do
+      = link_to search_shipments_path, class: 'btn btn-secondary' do
         %i.glyphicon.glyphicon-plus
           Search
   .col-sm-2
